RESOLVED FIXED62978
[EFL] ChromeClientEfl doesn't need to check whether m_view is null.
https://bugs.webkit.org/show_bug.cgi?id=62978
Summary [EFL] ChromeClientEfl doesn't need to check whether m_view is null.
Ryuan Choi
Reported 2011-06-20 05:03:47 PDT
ChromeClientEfl always are created with view and it will not be removed until destroyed. So, we don't need to check whether m_view is null.
Attachments
Patch (2.51 KB, patch)
2011-06-20 17:33 PDT, Ryuan Choi
no flags
Patch (2.52 KB, patch)
2011-06-20 18:03 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2011-06-20 17:33:08 PDT
Antonio Gomes
Comment 2 2011-06-20 17:45:27 PDT
Comment on attachment 97895 [details] Patch Should not you have ASSERTs instead then?
Ryuan Choi
Comment 3 2011-06-20 18:03:27 PDT
Ryuan Choi
Comment 4 2011-06-20 18:07:49 PDT
(In reply to comment #2) > (From update of attachment 97895 [details]) > Should not you have ASSERTs instead then? Thanks for your comment. m_view is only changed When called constructor of ChromeClientEfl. Does we need to add ASSERT before calling m_view every time? Almost other methods of ChromeClientEfl use m_view without checking m_view.
WebKit Review Bot
Comment 5 2011-06-20 18:32:26 PDT
The commit-queue encountered the following flaky tests while processing attachment 97898 [details]: http/tests/local/formdata/send-form-data.html bug 63034 (author: jianli@chromium.org) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 6 2011-06-20 18:33:45 PDT
Comment on attachment 97898 [details] Patch Clearing flags on attachment: 97898 Committed r89327: <http://trac.webkit.org/changeset/89327>
WebKit Review Bot
Comment 7 2011-06-20 18:33:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.